--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <version>2.10.10</version>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.11.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -32,6 +38,24 @@
 
 
     </dependencies>
+    <repositories>
+        <repository>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <id>central</id>
+            <name>libs-release</name>
+            <url>https://maven.cloud.coveo.com/artifactory/libs-release</url>
+        </repository>
+        <repository>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <id>snapshots</id>
+            <name>libs-snapshot</name>
+            <url>https://maven.cloud.coveo.com/artifactory/libs-snapshot</url>
+        </repository>
+    </repositories>
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
