--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,31 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.example</groupId>
+    <groupId>com.coveo</groupId>
     <artifactId>push-api-client.java</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://opensource.org/licenses/MIT</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <name>Olivier Lamothe</name>
+            <organization>Coveo</organization>
+            <organizationUrl>https://github.com/coveo</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:coveo/push-api-client.java.git</connection>
+        <developerConnection>scm:git:git@github.com:coveo/push-api-client.java.git</developerConnection>
+        <url>https://github.com/coveo/push-api-client.java</url>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>com.google.code.gson</groupId>
