test: add UT for platformclient class (#14)
https://coveord.atlassian.net/browse/CDX-439

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <version>2.10.10</version>
         </dependency>
         <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.11.2</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
@@ -59,6 +65,13 @@
 
 
     </dependencies>
+    <repositories>
+        <repository>
+            <id>jboss-community</id>
+            <url>https://repository.jboss.org/nexus/content/repositories/public/</url>
+        </repository>
+    </repositories>
+
 
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
