--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>com.coveo</groupId>
     <artifactId>push-api-client.java</artifactId>
     <version>1.0.0</version>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <packaging>jar</packaging>
+    <description>Coveo Push API client. See more on https://github.com/coveo/push-api-client.java</description>
+    <url>https://github.com/coveo/push-api-client.java</url>
 
     <licenses>
         <license>
