--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.coveo</groupId>
     <artifactId>push-api-client.java</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <name>${project.groupId}:${project.artifactId}</name>
     <packaging>jar</packaging>
     <description>Coveo Push API client. See more on https://github.com/coveo/push-api-client.java</description>
@@ -24,6 +24,11 @@
             <name>Olivier Lamothe</name>
             <organization>Coveo</organization>
             <organizationUrl>https://github.com/coveo</organizationUrl>
+        </developer>
+        <developer>
+            <name>Brian Langeland</name>
+            <organization>Skull &amp; Raven Solutions</organization>
+            <organizationUrl>https://github.com/brianlangeland</organizationUrl>
         </developer>
     </developers>
 
@@ -161,7 +166,8 @@
 
 
     <properties>
-        <maven.compiler.source>16</maven.compiler.source>
-        <maven.compiler.target>16</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
