--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -12,4 +12,6 @@ on:
 
 jobs:
   analyze-java:
-    uses: coveo/actions/.github/workflows/java-maven-openjdk11-codeql.yml@main
+    uses: coveo/public-actions/.github/workflows/java-maven-openjdk11-codeql.yml@main
+    with:
+      runs-on: "['linux', 'x64', 'ec2.instance-type = t3.large']"
