--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: 'adopt'
 
     - name: Validate code format
-      run: mvn formatter:validate
+      run: mvn spotless:check
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
