--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,10 +15,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
+
+    - name: Validate code format
+      run: mvn spotless:check
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
