--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "description": "CI related stuff only",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@commitlint/config-conventional": "17.4.4"
+    "@actions/core": "^1.10.0",
+    "@commitlint/config-conventional": "17.4.4",
+    "@octokit/auth-app": "^4.0.9"
   },
   "commitlint": {
     "extends": [
