ci: add get-token script

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,19 +8,32 @@ on:
 jobs:
   release:
     runs-on: ubuntu-latest
-    environment: CD
+    environment: 'Release'
     steps:
       - uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Get Release Token
+        run: npm run get-token
+
       - uses: actions/setup-java@v3
+        name: Set up Java
         with:
           java-version: '11'
           distribution: 'adopt'
 
-      - name: Build
+      - name: Build Java package
         run: mvn clean package
 
       - uses: google-github-actions/release-please-action@v3
+        name: Release Java package
         with:
           release-type: maven
           package-name: release-please-action
