--- a/.github/workflows/auto-approve-renovate.yml
+++ b/.github/workflows/auto-approve-renovate.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   auto-approve:
     runs-on: ubuntu-latest
-    if:  (github.actor == 'developer-experience-bot[bot]') && (contains(join(github.event.pull_request.labels.*.name), 'snpashot'))
+    if:  "${{ (github.actor == 'developer-experience-bot[bot]') && contains(github.event.pull_request.labels.*.name, 'autorelease: snapshot') }}"
     steps:
     - name: auto-approve
       id: auto-approve
