--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,22 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
+  "enabled": true,
   "extends": [
-    "config:base"
-  ]
+    ":semanticPrefixFixDepsChoreOthers",
+    "schedule:earlyMondays"
+  ],
+  "packageRules": [
+    {
+      "matchPackagePatterns": [
+        "*"
+      ],
+      "groupName": "all dependencies",
+      "groupSlug": "all"
+    }
+  ],
+  "rangeStrategy": "auto",
+  "lockFileMaintenance": {
+    "enabled": true
+  },
+  "automerge": true,
+  "commitMessageSuffix": "J:CDX-227"
 }
