--- a/pom.xml
+++ b/pom.xml
@@ -167,6 +167,11 @@
             <artifactId>commons-codec</artifactId>
             <version>1.16.0</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-retry</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
 
     </dependencies>
