--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,12 @@
             <version>1.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-model</artifactId>
+            <version>3.9.5</version>
+        </dependency>
+
 
     </dependencies>
     <repositories>
