--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,5 @@ jobs:
       run: mvn spotless:check
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn clean install -B --file pom.xml
+
