--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,5 +31,4 @@ jobs:
       run: mvn spotless:check
 
     - name: Build with Maven
-      run: mvn clean install -B --file pom.xml
-
+      run: mvn -B package --file pom.xml
