--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,7 @@
         <dependency>
             <groupId>io.github.resilience4j</groupId>
             <artifactId>resilience4j-retry</artifactId>
-            <version>1x.7.1</version>
+            <version>1.7.1</version>
         </dependency>
 
         <dependency>
