--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "enabled": true,
   "extends": [
+    "github>coveo/renovate-presets",
     ":semanticPrefixFixDepsChoreOthers",
     "schedule:earlyMondays"
   ],
