--- a/renovate.json
+++ b/renovate.json
@@ -1,9 +1,9 @@
 {
-  "enabled": true,
   "extends": [
     "github>coveo/renovate-presets",
     ":semanticPrefixFixDepsChoreOthers",
-    "schedule:earlyMondays"
+    "schedule:earlyMondays",
+    "github>coveo/renovate-presets//auto-merge.json"
   ],
   "packageRules": [
     {
@@ -14,10 +14,8 @@
       "groupSlug": "all"
     }
   ],
-  "rangeStrategy": "auto",
   "lockFileMaintenance": {
     "enabled": true
   },
-  "automerge": true,
   "commitMessageSuffix": "J:CDX-227"
 }
